# generate-aperiodic-graphs

./: .gitignore  CMakeLists.txt  README.md  conandata.yml
src/: analyze-automatas.cpp  generate-automatas.cpp  generate-biset-graphs.cpp  generate-graphs.cpp  main.cpp
src/Filters/: IFilter.h
src/Filters/Predicates/: Predicates.cpp  Predicates.h  Predicates.tpp
src/Filters/SimpleFilter/: SimpleFilter.cpp  SimpleFilter.h  SimpleFilter.tpp
src/Generators/: IGenerator.h
src/Generators/AllTwoOutgoingEdges/: AllTwoOutgoingEdges.cpp  AllTwoOutgoingEdges.h
src/Generators/AutomatasFromGraph/: AutomatasFromGraph.cpp  AutomatasFromGraph.h
src/Generators/BisetGraph/: BisetGraph.cpp  BisetGraph.h  BisetGraph.tpp
src/Generators/EulerianGraphs/: EulerianGraphs.cpp  EulerianGraphs.h
src/Generators/Functions/: Functions.cpp  Functions.h
src/Generators/RandomTwoOutgoingEdges/: RandomTwoOutgoingEdges.cpp  RandomTwoOutgoingEdges.h
src/Generators/TwoOutgoingEdges/: TwoOutgoingEdges.cpp  TwoOutgoingEdges.h
src/Readers/: IReader.h
src/Readers/MultipleGraphsReaders/: MultipleGraphsReader.cpp  MultipleGraphsReader.h
src/Readers/SingleGraphReader/: SingleGraphReader.cpp  SingleGraphReader.h
src/Recorders/: IRecorder.h
src/Recorders/ConsoleRecorder/: ConsoleRecorder.cpp  ConsoleRecorder.h
src/Recorders/DiskRecorder/: DiskRecorder.cpp  DiskRecorder.h  DiskRecorder.tpp
src/Recorders/NoRecorder/: NoRecorder.cpp  NoRecorder.h
src/Recorders/Utils/: Copy.h  Copy.tpp
src/Selectors/: GetGenerator.tpp  GetReader.tpp  GetRecorder.tpp  Selectors.h
src/Utils/: Utils.cpp  Utils.h  check_k_depth.py
src/types/: types.h
