cmake_minimum_required(VERSION 3.30)
project(generate_aperiodic_graphs)

find_package(Boost REQUIRED)
set(CMAKE_CXX_STANDARD 20)

add_executable(
        generate_graphs
        src/generate-graphs.cpp
        src/Recorders/DiskRecorder/DiskRecorder.tpp
        src/Recorders/ConsoleRecorder/ConsoleRecorder.cpp
        src/Recorders/NoRecorder/NoRecorder.cpp
        src/Generators/AllTwoOutgoingEdges/AllTwoOutgoingEdges.cpp
        src/Generators/RandomTwoOutgoingEdges/RandomTwoOutgoingEdges.cpp
        src/Filters/SimpleFilter/SimpleFilter.tpp
        src/Filters/Predicates/Predicates.tpp
        src/Selectors/Selectors.h
        src/Recorders/Utils/Copy.h
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.cpp
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.h
        src/Readers/SingleGraphReader/SingleGraphReader.cpp
        src/Readers/SingleGraphReader/SingleGraphReader.h
        src/Generators/BisetGraph/BisetGraph.cpp
        src/Generators/BisetGraph/BisetGraph.h
        src/Generators/EulerianGraphs/EulerianGraphs.cpp
        src/Generators/EulerianGraphs/EulerianGraphs.h
)
add_executable(
        generate_automatas
        src/generate-automatas.cpp
        src/Readers/SingleGraphReader/SingleGraphReader.cpp
        src/Recorders/ConsoleRecorder/ConsoleRecorder.cpp
        src/Recorders/DiskRecorder/DiskRecorder.tpp
        src/Generators/AllTwoOutgoingEdges/AllTwoOutgoingEdges.cpp
        src/Generators/RandomTwoOutgoingEdges/RandomTwoOutgoingEdges.cpp
        src/Recorders/NoRecorder/NoRecorder.cpp
        src/Selectors/Selectors.h
        src/Recorders/Utils/Copy.h
        src/Generators/AutomatasFromGraph/AutomatasFromGraph.cpp
        src/Generators/AutomatasFromGraph/AutomatasFromGraph.h
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.cpp
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.h
        src/Readers/SingleGraphReader/SingleGraphReader.cpp
        src/Readers/SingleGraphReader/SingleGraphReader.h
        src/Generators/BisetGraph/BisetGraph.cpp
        src/Generators/BisetGraph/BisetGraph.h
        src/Generators/EulerianGraphs/EulerianGraphs.cpp
        src/Generators/EulerianGraphs/EulerianGraphs.h
)
add_executable(
        analyze_automatas
        src/analyze-automatas.cpp
        src/Readers/SingleGraphReader/SingleGraphReader.cpp
        src/Filters/SimpleFilter/SimpleFilter.tpp
        src/Recorders/DiskRecorder/DiskRecorder.tpp
        src/Recorders/ConsoleRecorder/ConsoleRecorder.cpp
        src/Generators/AllTwoOutgoingEdges/AllTwoOutgoingEdges.cpp
        src/Generators/RandomTwoOutgoingEdges/RandomTwoOutgoingEdges.cpp
        src/Recorders/NoRecorder/NoRecorder.cpp
        src/Selectors/Selectors.h
        src/Recorders/Utils/Copy.h
        src/Generators/AutomatasFromGraph/AutomatasFromGraph.cpp
        src/Generators/AutomatasFromGraph/AutomatasFromGraph.h
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.cpp
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.h
        src/Readers/SingleGraphReader/SingleGraphReader.cpp
        src/Readers/SingleGraphReader/SingleGraphReader.h
        src/Generators/BisetGraph/BisetGraph.cpp
        src/Generators/BisetGraph/BisetGraph.h
        src/Generators/EulerianGraphs/EulerianGraphs.cpp
        src/Generators/EulerianGraphs/EulerianGraphs.h
)
add_executable(
        generate_biset_graphs
        src/generate-biset-graphs.cpp
        src/Readers/SingleGraphReader/SingleGraphReader.cpp
        src/Filters/SimpleFilter/SimpleFilter.tpp
        src/Recorders/DiskRecorder/DiskRecorder.tpp
        src/Recorders/ConsoleRecorder/ConsoleRecorder.cpp
        src/Generators/AllTwoOutgoingEdges/AllTwoOutgoingEdges.cpp
        src/Generators/RandomTwoOutgoingEdges/RandomTwoOutgoingEdges.cpp
        src/Recorders/NoRecorder/NoRecorder.cpp
        src/Selectors/Selectors.h
        src/Recorders/Utils/Copy.h
        src/Generators/AutomatasFromGraph/AutomatasFromGraph.cpp
        src/Generators/AutomatasFromGraph/AutomatasFromGraph.h
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.cpp
        src/Readers/MultipleGraphsReaders/MultipleGraphsReader.h
        src/Readers/SingleGraphReader/SingleGraphReader.cpp
        src/Readers/SingleGraphReader/SingleGraphReader.h
        src/Generators/BisetGraph/BisetGraph.cpp
        src/Generators/BisetGraph/BisetGraph.h
        src/Generators/EulerianGraphs/EulerianGraphs.cpp
        src/Generators/EulerianGraphs/EulerianGraphs.h
)
target_link_libraries(generate_graphs boost::boost)
target_link_libraries(generate_automatas boost::boost)
target_link_libraries(analyze_automatas boost::boost)
target_link_libraries(generate_biset_graphs boost::boost)
include_directories(${CMAKE_SOURCE_DIR}/src)
